--- a/infra/lambda_layer/workflow.yml
+++ b/infra/lambda_layer/workflow.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  create_zip:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,12 +27,31 @@ jobs:
           pip install -t lambda_layer aws-xray-sdk
           zip -r xray_layer.zip lambda_layer
 
+      - name: Archive xray_layer.zip
+        uses: actions/upload-artifact@v2
+        with:
+          name: xray_layer_zip
+          path: xray_layer.zip
+
+  deploy:
+    needs: create_zip
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
+
+      - name: Download xray_layer.zip
+        uses: actions/download-artifact@v2
+        with:
+          name: xray_layer_zip
 
       - name: Upload xray_layer.zip to S3
         run: aws s3 cp xray_layer.zip s3://my-layer-bucket/xray_layer.zip
